Closed Bug 1324614 Opened 9 years ago Closed 9 years ago

Failure in conformance2/state/gl-get-calls.html on OSX (getParameter(context.MAX_ELEMENT_INDEX) should be >= 16777215)

Categories

(Core :: Graphics: CanvasWebGL, defect, P1)

Unspecified
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox51 --- fixed
firefox52 --- fixed
firefox53 --- fixed

People

(Reporter: jgilbert, Assigned: jgilbert)

Details

(Whiteboard: gfx-noted)

Attachments

(1 file)

No description provided.
Comment on attachment 8820102 [details] Bug 1324614 - Make MAX_ELEMENT_INDEX default to UINT32_MAX when ES3_compat unavailable. - https://reviewboard.mozilla.org/r/99624/#review100070 LGTM
Attachment #8820102 - Flags: review?(dmu) → review+
Pushed by jgilbert@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/11b1af2e7430 Make MAX_ELEMENT_INDEX default to UINT32_MAX when ES3_compat unavailable. - r=daoshengmu
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Comment on attachment 8820102 [details] Bug 1324614 - Make MAX_ELEMENT_INDEX default to UINT32_MAX when ES3_compat unavailable. - Approval Request Comment [Feature/Bug causing the regression]: webgl2 [User impact if declined]: [Is this code covered by automated tests?]: [Has the fix been verified in Nightly?]: [Needs manual test from QE? If yes, steps to reproduce]: [List of other uplifts needed for the feature/fix]: [Is the change risky?]: [Why is the change risky/not risky?]: [String changes made/needed]:
Attachment #8820102 - Flags: approval-mozilla-beta?
Attachment #8820102 - Flags: approval-mozilla-aurora?
Comment on attachment 8820102 [details] Bug 1324614 - Make MAX_ELEMENT_INDEX default to UINT32_MAX when ES3_compat unavailable. - Fix WebGL2 related issue. Beta51+ & Aurora52+. Should be in 51 beta 10.
Attachment #8820102 - Flags: approval-mozilla-beta?
Attachment #8820102 - Flags: approval-mozilla-beta+
Attachment #8820102 - Flags: approval-mozilla-aurora?
Attachment #8820102 - Flags: approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: