Bug 1324614 - Make MAX_ELEMENT_INDEX default to UINT32_MAX when ES3_compat unavailable. - r=daoshengmu

MozReview-Commit-ID: 5y3cXDaLYXe